--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -1,1 +1,5 @@
 rabbit.interval=10
+jdbc.url=jdbc:postgresql://127.0.0.1:5434/rabbit
+jdbc.driver=org.postgresql.Driver
+jdbc.username=postgres
+jdbc.password=SParox1$
