--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,18 @@
 language: java
 # используем режим обычного пользователя для сборки проекта.
 
+# используем режим обычного пользователя для сборки проекта.
+jdk:
+  - openjdk11
+# используем режим обычного пользователя для сборки проекта.
+sudo: false
+
+# for codecov.io
+env:
+  global:
+    - CODECOV_TOKEN="ba74e241-59a8-4524-b421-7920d52d2f55"
+
+
 # после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
 # Здесь используется сторонни сервис https://codecov.io/
 after_success:
