--- a/src/main/resources/rabbit.properties
+++ b/src/main/resources/rabbit.properties
@@ -3,3 +3,4 @@ jdbc.url=jdbc:postgresql://127.0.0.1:5434/rabbit
 jdbc.driver=org.postgresql.Driver
 jdbc.username=postgres
 jdbc.password=SParox1$
+time=86400
