--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>job4j_grabber</groupId>
     <artifactId>grabber</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
     <version>3.0</version>
     <name>grabber</name>
     <url>http://job4j.ru/</url>
